2008-03-24  Badlop  <badlop@process-one.net>

	* src/msgs/de.msg: Fix irc typo (thanks to Jonathan Schleifer)
	* src/msgs/cs.msg: Likewise
	* src/msgs/pl.msg: Likewise
	* src/msgs/sk.msg: Likewise

2008-03-22  Mickael Remond  <mremond@process-one.net>

	* src/eldap/Makefile.in: Generate ELDAPv3.beam during first Makefile
	pass (EJAB-583).

2008-03-22  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document service_check_from (EJAB-576)
	* doc/guide.html: Likewise

2008-03-21  Badlop  <badlop@process-one.net>

	* src/mod_caps.erl: Move two log calls ERROR_MSG to DEBUG
	* src/shaper.erl: Move log call INFO_MSG to DEBUG

	* doc/guide.tex: Document s2s_default_policy and
	s2s_host (EJAB-575)
	* doc/guide.html: Likewise

2008-03-21  Christophe Romain <christophe.romain@process-one.net>

	* src/pam/epam.erl: Seek epam binary into priv/bin (EJAB-573)
	* src/ejabberd.erl: Likewise
	* src/ejabberdctl.template: Likewise
	* tools/ejabberdctl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Pubsub subscription is now wrapped in
	pubsub tags (EJAB-580)

2008-03-21  Badlop  <badlop@process-one.net>

	* src/cyrsasl_digest.erl: Rewrite io:format calls to loglevel
	macros (EJAB-555)
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_ctl.erl: Likewise
	* src/ejabberd_loglevel.erl: Likewise
	* src/ejabberd_s2s.erl: Likewise
	* src/ejabberd_sm.erl: Likewise
	* src/ejabberd_update.erl: Likewise
	* src/extauth.erl: Likewise
	* src/mod_irc/mod_irc.erl: Likewise
	* src/shaper.erl: Likewise
	* src/tls/tls.erl: Likewise
	* src/web/ejabberd_http_poll.erl: Likewise

	* src/ejabberd.hrl: New macro ?PRINT(Format, Args) to print in
	standard output

2008-03-20  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Improve explanation of how to start ejabberd when
	binary installer. Don't recommend R12 in Windows compilation.
	Describe what happens if maxrate shaper is exceeded.
	* doc/guide.html: Likewise

2008-03-20  Mickael Remond  <mremond@process-one.net>
